@@ -6,7 +6,7 @@ Pygame Readme Information
 <font size=+5><b>Pygame Readme</b></font>
 </td></tr><tr><td align=left width=33%><big>
 
-Version 1.9.0rc1
+Version 1.9.0rc2
 
 
 </td><td align=center width=34%><big>
@@ -71,7 +71,7 @@ Thanks to everyone who has helped contribute to this library.
 Special thanks are also in order.
 
 <li>Marcus Von Appen - many changes, and fixes, 1.7.1+ freebsd maintainer.</li>
-<li>Lenard Lindstrom - the 1.8+ windows maintainer.</li>
+<li>Lenard Lindstrom - the 1.8+ windows maintainer, many changes, and fixes.</li>
 <li>Brian Fisher - for svn auto builder, bug tracker and many contributions.</li>
 <li>Rene Dudfield - many changes, and fixes, 1.7+ release manager/maintainer.</li>
 <li>Phil Hassey - for his work on the pygame.org website.</li>
@@ -100,7 +100,8 @@ with my early design ideas</li>
    Spiller, Bo Jangeborg, Dmitry Borisov, Campbell Barton, Diego Essaya,
    Eyal Lotem, Regis Desgroppes, Emmanuel Hainry, Randy Kaelber
    Matthew L Daniel, Nirav Patel, Forrest Voight, Charlie Nolan, 
-   Frankie Robertson, John Krukoff, Lorenz Quack, Nick Irvine</li>
+   Frankie Robertson, John Krukoff, Lorenz Quack, Nick Irvine,
+   Michael George, Saul Spatz, Thomas Ibbotson, Tom Rothamel.</li>
 
 <li>And our bug hunters above and beyond:
     Angus, Guillaume Proux, Frank Raiser,
@@ -116,6 +117,8 @@ kept this project going, and basically made my life easer, Thanks!
 </p><p>
    Also many thanks for people creating games and putting them on the 
    pygame.org website for others to learn from and enjoy.
+</p><p>
+   Lots of thanks to James Paige for hosting the pygame bugzilla.
 </p><p>
 Also a big thanks to Roger Dingledine and the crew at SEUL.ORG
 for our excellent hosting.
